--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
 
 </head>
   <body>
-    <header>
-      <div>app.creation</div>
-    <nav>
-          <a>start</a>
-           <a>services</a>
-           <a>about</a>
-           <a>blog</a>
-           <a>contact us</a>
+    <header class="header">
+      <div class="logo">app.creation</div>
+    <nav class="menu">
+          <a class="menu__item" href="#">start</a>
+           <a class="menu__item" href="#">services</a>
+           <a class="menu__item" href="#">about</a>
+           <a class="menu__item" href="#">blog</a>
+           <a class="menu__item" href="#">contact us</a>
     </nav>
  </header>
-<section>
-    <main>
-        <h1>Building an App Without Design Expertise?</h1>
-         <p>I help tech startups design better digital products
+ <section class="mein-section">
+    <main class="mein-content">
+        <h1 class="mein-content__title">Building an App Without Design Expertise?</h1>
+         <p "mein-content__subtitle" >I help tech startups design better digital products
         without
         hiring a full-time designer</p>
-        <button>Schedule free consultation</button>
+        <button "mein-content__button">Schedule free consultation</button>
     </main>
-<div>
-    <img>
+<div class="img-content">
+    <img class="img-content__image" src="" alt="">
 </div>
-</section>
+  </section>
 </body>
 </html>
