--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <head>
      <meta charset="utf-8">
      <title>Мой первый сайт</title>
-     <link rel="stylesheet" href="styles.css">
-     <link rel="preconnect" href="https://fonts.gstatic.com">
+     <link rel="preconnect" href="https://fonts.google.com/">
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="preconnect" href="https://fonts.google.com/">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
-
+   <link rel="stylesheet" href="styles.css">
 </head>
   <body>
     <header class="header">
