Распределение имен класов

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
  <section class="mein-section">
     <main class="mein-content">
         <h1 class="mein-content__title">Building an App Without Design Expertise?</h1>
-         <p "mein-content__subtitle" >I help tech startups design better digital products
+         <p class="mein-content__subtitle" >I help tech startups design better digital products
         without
         hiring a full-time designer</p>
-        <button "mein-content__button">Schedule free consultation</button>
+        <button class="mein-content__button">Schedule free consultation</button>
     </main>
 <div class="img-content">
     <img class="img-content__image" src="" alt="">
