--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
      <meta charset="utf-8">
      <title>Мой первый сайт</title>
      <link rel="preconnect" href="https://fonts.google.com/">
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.google.com/">
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
-   <link rel="stylesheet" href="styles.css">
+      <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.google.com/">
+      <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
+     <link rel="stylesheet" href="styles.css">
 </head>
   <body>
     <header class="header">
@@ -21,13 +21,13 @@
            <a class="menu__item" href="#">contact us</a>
     </nav>
  </header>
- <section class="mein-section">
-    <main class="mein-content">
-        <h1 class="mein-content__title">Building an App Without Design Expertise?</h1>
-         <p class="mein-content__subtitle" >I help tech startups design better digital products
+ <section class="main-section">
+    <main class="main-content">
+        <h1 class="main-content__title">Building an App Without Design Expertise?</h1>
+         <p class="main-content__subtitle" >I help tech startups design better digital products
         without
         hiring a full-time designer</p>
-        <button class="mein-content__button">Schedule free consultation</button>
+        <button class="main-content__button">Schedule free consultation</button>
     </main>
 <div class="img-content">
     <img class="img-content__image" src="" alt="">
