--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
      <link rel="stylesheet" href="styles.css">
 </head>
   <body>
+    <div class="wrapper">
     <header class="header">
       <div class="logo">app.creation</div>
     <nav class="menu">
@@ -33,5 +34,6 @@
     <img class="img-content__image" src="" alt="">
 </div>
   </section>
+</div>
 </body>
 </html>
