--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
 <head>
      <meta charset="utf-8">
      <title>Мой первый сайт</title>
-     <link rel="preconnect" href="https://fonts.google.com/">
+   <link rel="preconnect" href="https://fonts.google.com/">
       <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet">
       <link rel="preconnect" href="https://fonts.google.com/">
       <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
+      <link rel="stylesheet"  href="font.css">
      <link rel="stylesheet" href="styles.css">
 </head>
   <body>
     <div class="wrapper">
     <header class="header">
-      <div class="logo">app.creation</div>
+    <!--  <div class="logo">app.creation</div> -->
+    <div class="logo">
+
+    </div>
     <nav class="menu">
           <a class="menu__item" href="#">start</a>
            <a class="menu__item" href="#">services</a>
