--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
      <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Мой первый сайт</title>
    <link rel="preconnect" href="https://fonts.google.com/">
       <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet">
@@ -17,8 +18,23 @@
     <!--  <div class="logo">app.creation</div> -->
     <div class="logo">
 
-    </div>
-    <nav class="menu">
+      </div>
+
+    <div class="hamburger-menu">
+
+       <input id="menu__toggle" type="checkbox"/>
+       <label class="menu__btn" for="menu__toggle">
+             <span></span>
+       </label>
+      <ul class="menu__box">
+              <li><a class="menu__item" href="#">start</a></li>
+              <li><a class="menu__item" href="#">services</a></li>
+              <li><a class="menu__item" href="#">about</a></li>
+              <li><a class="menu__item" href="#">blog</a></li>
+              <li><a class="menu__item" href="#">contact us</a></li>
+      </ul>
+  </div>
+     <nav class="menu">
           <a class="menu__item" href="#">start</a>
            <a class="menu__item menu__item_active" href="#">services</a>
            <a class="menu__item" href="#">about</a>
@@ -33,7 +49,7 @@
         </span>
       </h1>
          <p class="main__subtitle" >I help tech startups design better digital products
-        without hiring a full-time designer</p>
+        without hiring a&nbsp;full-&nbsp;time designer</p>
         <a class="main__button"href="#">
           Schedule free consultation
         </a>
